--- a/gradle.properties
+++ b/gradle.properties
@@ -1,38 +1,25 @@
-#Tue, 19 May 2015 17:15:25 -0700
+# artifacts group
 group=ai.h2o
-version=2.4.99999-SNAPSHOT
 # Major version of H2O release
 h2oMajorVersion=3.24.0
 # Name of H2O major version
 h2oMajorName=yates
 # H2O Build version, defined here to be overriden by -P option
 h2oBuild=5
-# Spark version
-sparkVersion=2.4.3
-
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
 scalaBaseVersion=2.11
-
 # Internal Nexus location
 localNexusLocation=http://nexus:8081/nexus/repository
-
 # Version of Mojo Pipeline library
 mojoPipelineVersion=0.13.16
-
-# Set to True of mojo pipelines integration tests should run
-# as part of the Sparkling Water testing suite
+# Defines whether to run tests with Driverless AI mojo pipelines
+# These tests require license and runtime jar artifact
 testMojoPipeline=false
-
 # Disable execution of the gradle daemon
 org.gradle.daemon=false
-
-minSupportedJavaVersion=1.8
-supportedSparkVersions=2.1 2.2 2.3 2.4
-supportedEmrVersion=emr-5.21.0
-
-# Test environment
-extraJVMArgs=
-
-unsupportedMinorSparkVersions=2.4.2
-
+# Version of docker image used in Jenkins tests
 dockerImageVersion=16
+# Supported Major Spark Versions
+supportedSparkVersions=2.1 2.2 2.3 2.4
+# Select for which Spark version is Sparkling Water built by default
+spark=2.4
