--- a/gradle/release.gradle
+++ b/gradle/release.gradle
@@ -12,7 +12,7 @@ release {
     failOnUnversionedFiles = false
     failOnCommitNeeded = false
     preCommitText = ":tada: "
-
+    versionPropertyFile = "gradle-spark${spark}.properties"
     git {
         requireBranch = null
     }
