[SW-1406] Unificate resource files

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,7 +11,7 @@ sourceSets {
             srcDirs += getSparkSpecificSourceDir(sparkMajorVersion)
         }
         resources {
-            srcDir("flow-css")
+            srcDirs += getSparkSpecificResourceDir(sparkMajorVersion) + ["${projectDir}/flow-css"]
         }
     }
 }
