Revert "[SW-1406][FollowUp] Implement abstraction over obtaining info for UI"
This reverts commit 855f4539632317ba7e34ae36fc5fc6560221e971.

(cherry picked from commit 5082a1443b58744c38fbc8afd3a4f12589b1ea48)

--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -80,11 +80,8 @@ def getCurrentRSparklingVersion(def projectDir) {
 }
 
 def getSparkSpecificSourceDir(sparkMajorVersion) {
-    def sourceDirs = []
-    file("src/main").eachDir {sourceDirs << it.name}
-    def sourceDir = sourceDirs.find {it -> it.startsWith("scala_spark") && it.contains(sparkMajorVersion)}
-    if (file(sourceDir ) != null) {
-        return ["src/main/$sourceDir"]
+    if (file("src/main/scala_spark_$sparkMajorVersion").exists()) {
+        return ["src/main/scala_spark_$sparkMajorVersion"]
     } else if (file("src/main/scala_spark_others").exists()) {
         return ["src/main/scala_spark_others"]
     } else {
@@ -93,12 +90,8 @@ def getSparkSpecificSourceDir(sparkMajorVersion) {
 }
 
 def getSparkSpecificResourceDir(sparkMajorVersion) {
-
-    def sourceDirs = []
-    file("src/main").eachDir {sourceDirs << it.name}
-    def sourceDir = sourceDirs.find {it -> it.startsWith("resources_spark") && it.contains(sparkMajorVersion)}
-    if (file(sourceDir ) != null) {
-        return ["src/main/$sourceDir"]
+    if (file("src/main/resources_spark_$sparkMajorVersion").exists()) {
+        return ["src/main/resources_spark_$sparkMajorVersion"]
     } else if (file("src/main/resources_spark_others").exists()) {
         return ["src/main/resources_spark_others"]
     } else {
