[SW-1412] Integrate generic conversion logic to data frame conversion to H2O frames

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -121,6 +121,8 @@ dependencies {
   testCompile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
 
   testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+
+  testCompile project(':sparkling-water-macros')
     
   // And use scalatest for Scala testing
   testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
