--- a/r/src/DESCRIPTION
+++ b/r/src/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rsparkling
 Title: R Interface for H2O Sparkling Water
-Version: SUBST_PROJECT_VERSION
+Version: SUBST_SW_VERSION
 Authors@R: c(
   person("Jakub", "Hava", role = c("aut", "cre"), email = "jakub@h2o.ai"),
   person("Navdeep", "Gill", role = c("aut"), email = "navdeep@h2o.ai"),
