--- a/gradle-spark2.4.properties
+++ b/gradle-spark2.4.properties
@@ -1,5 +1,5 @@
 # Sparkling Water Version
-version=2.4.99999-SNAPSHOT
+version=3.26.1-SNAPSHOT-2.4
 sparkVersion=2.4.3
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.21.0
