--- a/gradle-spark2.1.properties
+++ b/gradle-spark2.1.properties
@@ -1,5 +1,5 @@
 # Sparkling Water Version
-version=2.1.99999-SNAPSHOT
+version=3.26.1-SNAPSHOT-2.1
 sparkVersion=2.1.3
 minSupportedJavaVersion=1.7
 supportedEmrVersion=emr-5.7.0
