--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -61,14 +61,6 @@ def getSupportedHadoopDistributions(h2oMajorName, h2oBuild) {
     return distributions.join(" ")
 }
 
-def getCurrentRSparklingVersion(def projectDir) {
-    def proc = ['R', '-e', "source('for_release/utils.R'); getCurrentVersion(\"src\");"].execute([], file(projectDir))
-    def lines = proc.text.readLines()
-    def idx = lines.findIndexOf { it.contains("[1]") }
-    def patchVersion = lines[idx].replace("[1] ", "").toString()
-    return "0.2." + patchVersion
-}
-
 def getSparkSpecificSourceDir(sparkMajorVersion) {
     if (file("src/main/scala_spark_$sparkMajorVersion").exists()) {
         return ["src/main/scala_spark_$sparkMajorVersion"]
@@ -89,27 +81,37 @@ def getSparkSpecificResourceDir(sparkMajorVersion) {
     }
 }
 
-def getPatchVersionNumber() {
-    def patchVersion = version.toString().split("\\.")[2]
+def getS3BucketPrefix() {
+    def prefix = "sparkling-water/spark-${spark}"
 
-    if (isNightlyBuild) {
-        return patchVersion.split("-")[1]
+    def branch = getGitBranch()
+    def formattedSWBranch = branch.replaceAll("/", "-")
+    def path
+    if (project.hasProperty("buildAgainstH2OBranch")) {
+        def h2oBranch = project.property("buildAgainstH2OBranch")
+        def formattedH2OBranch = h2oBranch.replaceAll("/", "-")
+        path = "${prefix}/${formattedSWBranch}_${formattedH2OBranch}"
     } else {
-        return patchVersion
+        def majorVersion = "${version.split("\\.")[0]}.${version.split("\\.")[1]}"
+        def relBranch = "rel-${majorVersion}"
+        if (branch == relBranch) {
+            path = "${prefix}"
+        } else {
+            path = "${prefix}/${formattedSWBranch}"
+        }
+    }
+    if (isNightlyBuild) {
+        return "${path}/nightly"
+    } else {
+        return path
     }
 }
 
 def getS3Bucket() {
-    def prefix = "sparkling-water/${getGitBranch().replaceAll("/", "-")}-${spark}"
-    def suffix = getPatchVersionNumber()
+    def prefix = getS3BucketPrefix()
+    return "${prefix}/${version}"
 
-    if (isNightlyBuild) {
-        return "${prefix}/nightly/${suffix}"
-    } else {
-        return "${prefix}/${suffix}"
-    }
 }
-
 // Export methods by turning them into closures
 ext {
     getOsSpecificCommandLine = this.&getOsSpecificCommandLine
@@ -120,8 +122,8 @@ ext {
     getGitBranch = this.&getGitBranch
     getH2OBranch = this.&getH2OBranch
     getSupportedHadoopDistributions = this.&getSupportedHadoopDistributions
-    getCurrentRSparklingVersion = this.&getCurrentRSparklingVersion
     getSparkSpecificSourceDir = this.&getSparkSpecificSourceDir
     getSparkSpecificResourceDir = this.&getSparkSpecificResourceDir
     getS3Bucket = this.&getS3Bucket
+    getS3BucketPrefix = this.&getS3BucketPrefix
 }
