--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # artifacts group
 group=ai.h2o
 # Major version of H2O release
-h2oMajorVersion=3.24.0
+h2oMajorVersion=3.26.0
 # Name of H2O major version
-h2oMajorName=yates
+h2oMajorName=yau
 # H2O Build version, defined here to be overriden by -P option
-h2oBuild=5
+h2oBuild=1
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
 scalaBaseVersion=2.11
 # Internal Nexus location
