[SW-1422] Switch to one version (#1347)

--- a/gradle-spark2.2.properties
+++ b/gradle-spark2.2.properties
@@ -1,5 +1,5 @@
 # Sparkling Water Version
-version=2.2.99999-SNAPSHOT
+version=3.28.1-SNAPSHOT-2.2
 sparkVersion=2.2.3
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.12.0
