--- a/gradle-spark2.3.properties
+++ b/gradle-spark2.3.properties
@@ -1,5 +1,5 @@
 # Sparkling Water Version
-version=2.3.99999-SNAPSHOT
+version=3.28.1-SNAPSHOT-2.3
 sparkVersion=2.3.3
 minSupportedJavaVersion=1.8
 supportedEmrVersion=emr-5.19.0
