--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ dockerImageVersion=16
 supportedSparkVersions=2.1 2.2 2.3 2.4
 # Select for which Spark version is Sparkling Water built by default
 spark=2.4
+# Sparkling Water Version
+version=3.28.1-SNAPSHOT
